--- a/patron/index.html
+++ b/patron/index.html
@@ -43,7 +43,6 @@
   <header>
     <div class="quote text-center">
       <h1 class="title"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></h1>
-      <!-- <h3>Non-profit organization in Canada.<font class="fr">&nbsp;&#92;&nbsp;Organisation &agrave; but non lucratif au Canada.</font></h3> -->
       <h3>Patrons of the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Patrons des sc&egrave;nes d'art de la nature.</font></h3>
 
     </div>
@@ -90,7 +89,7 @@
         <p>Support independent art at Animat Habitat as member of a <a href="../societas/concilium/" title="Animat Habitat / Council" rel="noopener">Council</a>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat comme membre d'un conseil.</font></p>
 
         <h3 class="linebreak"><font>Official Selections<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles</font></font></h3>
-        <p>Animat Habitat creates art for the conservation of endangered species and their natural habitats. As a not-for-profit organization, it is our honour to support a small selection of wildlife conservation projects. As a small art studio, it is not in our interest to overextend commitments. Instead, we believe in on-going partnerships to support the long term sustainability of these select projects. These are the wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat cr&eacute;e de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels. En tant qu'organisation &agrave; but non lucratif, nous avons honneur de soutenir une petite s&eacute;lection de projets de conservation de la nature. En tant que petit studio d'art, nous n'avons pas int&eacute;r&ecirc;t &agrave; d&eacute;passer nos engagements. Au lieu de cela, nous croyons aux partenariats continus pour soutenir la durabilit&eacute; &agrave; long terme de ces projets s&eacute;lectionn&eacute;s. Ce sont les projets de conservation de la nature en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
+        <p>Animat Habitat creates art for the conservation of endangered species and their natural habitats. As a not-for-profit organization in Canada, it is our honour to support a small selection of wildlife conservation projects. As a small art studio, it is not in our interest to overextend commitments. Instead, we believe in on-going partnerships to support the long term sustainability of these select projects. These are the wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat cr&eacute;e de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels. En tant qu'organisation &agrave; but non lucratif, nous avons honneur de soutenir une petite s&eacute;lection de projets de conservation de la nature. En tant que petit studio d'art au Canada, nous n'avons pas int&eacute;r&ecirc;t &agrave; d&eacute;passer nos engagements. Au lieu de cela, nous croyons aux partenariats continus pour soutenir la durabilit&eacute; &agrave; long terme de ces projets s&eacute;lectionn&eacute;s. Ce sont les projets de conservation de la nature en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
 
       </div>
 
