--- a/societas/concilium/index.html
+++ b/societas/concilium/index.html
@@ -43,7 +43,7 @@
   <header>
     <div class="quote text-center">
       <h1 class="title"><font class="clear">Animat<font class="letterspace-sp"> </font><font class="thin">Habitat</font></font></h1>
-      <h3>Council:<font class="fr">&nbsp;&#92;&nbsp;Conseil:</font></h3>
+      <h3>Not-for-profit art studio councils.<font class="fr">&nbsp;&#92;&nbsp;Conseils d'ateliers d'art &agrave; but non-lucratif.</font></h3>
 
     </div>
 
